Remove unnecessary semicolon from supabaseClient

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ nav button {
 const SUPABASE_URL = "https://tzsqgwupguttgsuhbknb.supabase.co"
 const SUPABASE_KEY = "sb_publishable_nB-DBmdfeDkjqPLQeuSxrw_mE-p30aO"
 
-const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY)
 
 /* =====================
    AUTH
