Fix supabase client creation method

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
 const SUPABASE_URL = 'https://tzsqgwupguttgsuhbknb.supabase.co';
 const SUPABASE_ANON_KEY = 'sb_publishable_nB-DBmdfeDkjqPLQeuSxrw_mE-p30aO';
 
-const supabase = supabaseJs.createClient(
+const supabase = supabase.createClient(
   SUPABASE_URL,
   SUPABASE_ANON_KEY
 );
